--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,133 @@
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f0f0f0;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  background-image: url('/public/psychology-image.png');
+  background-color: #282c34;
+  color: rgb(13, 13, 13);
+  text-align: center;
+  padding: 20px;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  
+}
+header::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(40, 44, 52, 0.5); /* Adjust the transparency and color */
+  z-index: 1;
+}
+
+.header-title h1 {
+  position: relative;
+  z-index: 2;
+  margin: 0;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  margin-top: 20px;
 }
 
 .App-header {
+  background-color: #fff;
+  padding: 80px;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: inline-block;
+}
+
+form {
+  margin-top: 20px;
+}
+
+input[type="text"] {
+  padding: 10px;
+  width: 600px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-right: 10px;
+}
+
+button {
+  padding: 10px 20px;
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+button:hover {
+  background-color: #2b6285;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p {
+  margin-top: 20px;
+  font-size: 1.2em;
+  color: #333;
+}
+
+h2 {
+  color: #333; /* Dark gray color for better visibility */
+}
+h1 {
+  text-align: center;
+  color: #333;
+}
+.container {
+  display: flex;
+  justify-content: center;
+  padding: 16px;
+  font-family: Arial, sans-serif;
+}
+
+.articles-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(380px, 1fr));
+  gap: 16px;
+  padding: 16px;
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  font-family: Arial, sans-serif;
+  
+}
+
+.article-item {
+  list-style: none;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  transition: transform 0.2s;
+  
+  
+}
+
+.article-item:hover {
+  transform: scale(1.05);
+}
+
+.image-container {
+  width: 100%;
+  height: 200px; /* Set a fixed height for the image container */
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+.image-container img {
+  max-width: 100%;
+  max-height: 100%;
 }
